--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "mongoose": "^8.19.2"
   },
   "devDependencies": {
