--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "@types/amqplib": "^0.10.8",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.9.2",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.3.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app/server.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/app/server.js"
+    "start": "node dist/app/server.js",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch"
   }
 }
