--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.8",
