--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "mongoose": "^8.19.2",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -17,8 +18,10 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.9.2",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^30.2.0",
     "mongodb-memory-server": "^10.3.0",
+    "openapi-types": "^12.1.3",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
