--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PORT=3001
-MONGO_URI=mongodb://localhost:27017/customers
-REDIS_URI=redis://localhost:6379
-RABBIT_URI=amqp://localhost:5672
+PORT=3000
+MONGO_URI=mongodb://mongo:27017/customers
+REDIS_URI=redis://redis:6379
+RABBIT_URI=amqp://rabbitmq:5672
+REDIS_TTL_SECONDS=300
