--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "amqplib": "^0.10.9",
+    "amqplib": "^0.10.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
@@ -31,7 +31,6 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/app/server.js",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch"
+    "test": "jest --passWithNoTests"
   }
 }
