--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
     "mongoose": "^8.19.2",
+    "morgan": "^1.10.1",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.25.76"
   },
@@ -16,6 +18,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.2",
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
