--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@types/node": "^24.9.2",
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "eslint-config-prettier": "^10.1.8",
     "jest": "^30.2.0",
     "mongodb-memory-server": "^10.3.0",
     "openapi-types": "^12.1.3",
+    "prettier": "^3.6.2",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
@@ -34,6 +38,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/app/server.js",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "format": "prettier -w .",
+    "seed": "ts-node ./src/scripts/seed.ts"
   }
 }
