--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/app/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "docker:build": "docker-compose up -d --build",
+    "docker:logs": "docker-compose logs -f app",
+    "start": "node dist/app/server.js",
+    "test": "jest --passWithNoTests",
+    "format": "prettier -w .",
+    "seed": "ts-node ./src/scripts/seed.ts"
+  },
   "dependencies": {
     "amqplib": "^0.10.4",
     "cors": "^2.8.5",
@@ -33,13 +43,5 @@
     "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
-  },
-  "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app/server.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/app/server.js",
-    "test": "jest --passWithNoTests",
-    "format": "prettier -w .",
-    "seed": "ts-node ./src/scripts/seed.ts"
   }
 }
