--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
       - '**.json'
       - '**.yml'
       - 'Dockerfile'
-    branches: [ "main" ]
+    branches: [ "master" ]
 
   push:
     paths:
@@ -17,7 +17,7 @@ on:
       - '**.json'
       - '**.yml'
       - 'Dockerfile'
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   tests:
